@@ -1,3 +1,8 @@
+2003-08-18  Rodrigo Moya <rodrigo@ximian.com>
+
+	* src/libical/icalcomponent.c (icalcomponent_set_uid): added missing
+	implementation.
+
 2003-08-07  Rodrigo Moya <rodrigo@ximian.com>
 
 	* src/libical/icalcomponent.c (icalcomponent_get_uid): added missing
